Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91630

Rendering error with OpenGL in Lancelot test case involving Item2D

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.0.3, 6.1.0 RC, 6.1
    • 6.1
    • Quick: 3D
    • None
    • 80029e0ca65d4bf4575f7a08d186c781ec6c2f0e (qt/qtbase/dev) 2ed9bae3dfbdadea6f60eef6e3a1558918b7a36a (qt/qtbase/6.0) 0b490df50f035dd92b83354e4abb3e351cb9bbbf (qt/qtbase/6.1)
    • Qt Quick 3D - 2021 Week 9 - 10

    Description

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes