src/gui/rhi/qrhigles2_p_p.h
@@ -290,6 +290,8 @@ struct QGles2GraphicsPipeline : public QRhiGraphicsPipeline
     QGles2UniformDescriptionVector uniforms;
     QGles2SamplerDescriptionVector samplers;
     QGles2UniformState uniformState[QGles2UniformState::MAX_TRACKED_LOCATION + 1];
+    QRhiShaderResourceBindings *currentSrb = nullptr;
+    uint currentSrbGeneration = 0;
     uint generation = 0;
     friend class QRhiGles2;
 };
@@ -305,6 +307,8 @@ struct QGles2ComputePipeline : public QRhiComputePipeline
     QGles2UniformDescriptionVector uniforms;
     QGles2SamplerDescriptionVector samplers;
     QGles2UniformState uniformState[QGles2UniformState::MAX_TRACKED_LOCATION + 1];
+    QRhiShaderResourceBindings *currentSrb = nullptr;
+    uint currentSrbGeneration = 0;
     uint generation = 0;
     friend class QRhiGles2;
 };
